      (Arnaud Boudou).
    * Bug #1526431 : Java script error in IE on delete (Arnaud Boudou).
    * Bug #1524048 : Session Data Gets Mangled / NoccKey and NoccIdent (Arnaud
      Boudou).
    * Bug #1524044 : SMTP Auth Failures mishandled (Arnaud Boudou).
    * Bug #1518887 : errors when enable preferences (Arnaud Boudou).

  Patches
    * Patch #1600416 : Split 'from' column internally (Tim Gerundt).
    * Patch #1590397 : login_with_domain not checked correctly (Tim Gerundt).
    * Patch #1583460 : Add '...' after cutted mail data (Tim Gerundt).
    * Patch #1581097 : Don't print mailSwitchHeaders (Tim Gerundt).
    * Patch #1579972 : Missing translations nl.php (openfan).
    * Patch #1579550 : Remove content-type header from index.php (Tim Gerundt).
    * Patch #1578504 : Use <label> for signature pref (Tim Gerundt).
    * Patch #1577111 : German translation update (Tim Gerundt).
    * Patch #1575815 : Small change to structured text (Tim Gerundt).
    * Patch #1575206 : Optimize $alt_next and $alt_prev (Tim Gerundt).
    * Patch #1574359 : Use <label> for $reapply_filters in html_top_table.php
      (Tim Gerundt).
    * Patch #1574348 : form margin cause layout flaws in IE (Tim Gerundt).
    * Patch #1574328 : Missing parameters for htmlentities() in menu_mail.php
      (Tim Gerundt).
    * Patch #1572760 : Display structured text (Tim Gerundt).
    * Patch #1572077 : Put sort image after column title (Tim Gerundt).
    * Patch #1571741 : Colored quotes (Tim Gerundt and Arnaud Boudou).
    * Patch #1571456 : Do htmlspecialchars() after substr() (Tim Gerundt).
    * Patch #1571364 : Use title for sort images (Tim Gerundt).
    * Patch #1569369 : Use logon aliases (Tim Gerundt).
    * Patch #1566239 : Remove unnecessary table from "html/html_mail_*.php" (Tim
      Gerundt).
    * Patch #1565779 : Use <th> for mail headers too (Tim Gerundt).
    * Patch #1565759 : Use "sendData" class for mail_body in "html/send.php" too
      (Tim Gerundt).