@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/lang/cs.php,v 1.41 2006/10/18 19:22:13 goddess_skuld Exp $ 
+ * $Header: /cvsroot/nocc/nocc/webmail/lang/cs.php,v 1.42 2006/10/20 12:20:00 goddess_skuld Exp $ 
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -10,6 +10,7 @@
  *
  * Configuration file for the Czech language
  * Translation by Vaclav Habr <habr@fonet.cz>
+ * Translation by Lukas Mizoch <www.mizoch.info>
  */
 
 $charset = 'UTF-8';
@@ -71,7 +72,7 @@ $html_help = 'Pomoc';
 $html_server = 'Server'; //to translate
 $html_wrong = 'Prihlašovací jméno a heslo nesouhlasí';
 $html_retry = 'Zkusit znovu';
-$html_remember = "Remember settings"; //to translate
+$html_remember = 'Pamatovat nastavení';
 
 // prefs.php
 
@@ -87,54 +88,54 @@ $html_use_signature = 'Použij podpis';
 $html_signature = 'Podpis';
 $html_reply_leadin = 'Hlavička odpovědi';
 $html_prefs_updated = 'Nastavení aktualizováno ';
-$html_manage_folders_link = 'Manage IMAP Folders';  //to translate
-$html_manage_filters_link = 'Manage Email Filters';  //to translate
-$html_use_graphical_smilies = 'Use graphical smilies'; //to translate
-$html_sent_folder = 'Copy sent mails into a dedicated folder'; //to translate
+$html_manage_folders_link = 'Spravovat IMAP složky';
+$html_manage_filters_link = 'Spravovat poštovní filtry';
+$html_use_graphical_smilies = 'Používat grafické smajlíky';
+$html_sent_folder = 'Kopírovat odeslané dopisy do vyhrazení složky';
 $html_colored_quotes = 'Colored quotes'; //to translate
 $html_display_struct = 'Display structured text'; //to translate
 $html_send_html_mail = 'Send mail in HTML format'; //to translate
 
 // folders.php
-$html_folders_create_failed = 'Folder could not be created!';  //to translate
-$html_folders_sub_failed = 'Could not subscribed to folder!';  //to translate
-$html_folders_unsub_failed = 'Could not unsubscribed from folder!';  //to translate
-$html_folders_rename_failed = 'Folder could not be renamed!';  //to translate
-$html_folders_updated = 'Folders updated';  //to translate
-$html_folder_subscribe = 'Subscribe to';  //to translate
-$html_folder_rename = 'Rename';  //to translate
-$html_folder_create = 'Create new folder called';  //to translate
-$html_folder_remove = 'Unsubscribe from';  //to translate
-$html_folder_delete = 'Delete';  //to translate
+$html_folders_create_failed = 'Složka nemohla být vytvořena!';
+$html_folders_sub_failed = 'Nelze se přihlásit do složky!';
+$html_folders_unsub_failed = 'Nelze se odhlásit ze složky!';
+$html_folders_rename_failed = 'Složku nelze přejmenovat!';
+$html_folders_updated = 'Složky aktualizovány';
+$html_folder_subscribe = 'Přihlásit do';
+$html_folder_rename = 'Přejmenovat';
+$html_folder_create = 'Vytvořit novou složku';
+$html_folder_remove = 'Odhlásit z';
+$html_folder_delete = 'Smazat';
 $html_folder_to = 'to'; //to translate
 
 // filters.php
-$html_filter_remove = 'Delete';  //to translate
-$html_filter_body = 'Message Body';  //to translate
-$html_filter_subject = 'Message Subject';  //to translate
-$html_filter_to = 'To Field';  //to translate
-$html_filter_cc = 'Cc Field';  //to translate
-$html_filter_from = 'From Field';  //to translate
-$html_filter_change_tip = 'To change a filter simply overwrite it.';  //to translate
-$html_reapply_filters = 'Reapply all filters';  //to translate
-$html_filter_contains = 'contains';  //to translate
-$html_filter_name = 'Filter Name';  //to translate
-$html_filter_action = 'Filter Action';  //to translate
-$html_filter_moveto = 'Move to';  //to translate
+$html_filter_remove = 'Smazat';
+$html_filter_body = 'Tělo zprávy';
+$html_filter_subject = 'Věc zprávy';
+$html_filter_to = 'Pole Komu';
+$html_filter_cc = 'Pole Kopie';
+$html_filter_from = 'Pole Od';
+$html_filter_change_tip = 'Pro změnu filtru ho jednoduše přepište.';
+$html_reapply_filters = 'Znovu použij všechny filtry';
+$html_filter_contains = 'obsahuje';
+$html_filter_name = 'Jméno filtru';
+$html_filter_action = 'Akce filtru';
+$html_filter_moveto = 'Přesuň do';
 
 // Other pages
-$html_select_one = '--Select One--';  //to translate
-$html_and = 'And';  //to translate
-$html_new_msg_in = 'New messages in';  //to translate
-$html_or = 'or';  //to translate
-$html_move = 'Move';  //to translate
-$html_copy = 'Copy';  //to translate
-$html_messages_to = 'selected messages to';  //to translate
-$html_gotopage = 'Go to Page';  //to translate
-$html_gotofolder = 'Go to Folder';  //to translate
-$html_other_folders = 'Folder List';  //to translate
-$html_page = 'Page';  //to translate
-$html_of = 'of';  //to translate
+$html_select_one = '--Zvolte jeden--';
+$html_and = 'a zároveň';
+$html_new_msg_in = 'Nové zprávy v';
+$html_or = 'nebo';
+$html_move = 'přesuň';
+$html_copy = 'kopíruj';
+$html_messages_to = 'vybrané zprávy do';
+$html_gotopage = 'Jít na stránku';
+$html_gotofolder = 'Jít na složku';
+$html_other_folders = 'Seznam složek';
+$html_page = 'Stránka';
+$html_of = 'z';
 $html_view_header = 'Zobrazit hlavičku';
 $html_remove_header = 'Skrýt hlavičku';
 $html_inbox = 'Doručená pošta';
@@ -154,7 +155,7 @@ $html_att_unknown = '[neznámá]';
 $html_attach = 'Přiložit';
 $html_attach_forget = 'Soubor musí být přiložen před odesláním zprávy';
 $html_attach_delete = 'Vymazat vybrané';
-$html_attach_none = 'You must select a file to attach!';  //to translate
+$html_attach_none = 'Musíte vybrat soubor k přiložení!';
 $html_sort_by = 'Seřadit dle';
 $html_sort = 'Seřadit';
 $html_from = 'Od';
@@ -184,46 +185,44 @@ $html_normal = 'Střední';
 $html_high = 'Vysoká';
 $html_receipt = 'Potvrzení o doručení';
 $html_select = 'Vybrat';
-$html_select_all = 'Invert Selection';  //to translate
+$html_select_all = 'Invertovat výběr';
 $html_loading_image = 'Nahrávám obrázek';
 $html_send_confirmed = 'Váš dopis byl přijat k doručení';
 $html_no_sendaction = 'Nedefinovaná akce. Zkuste povolit JavaScript.';
 $html_error_occurred = 'Došlo k chybě';
 $html_prefs_file_error = 'Chyba při ukládání souboru s nastavením.';
-$html_wrap = 'Wrap outgoing messages to :';  //to translate
-$html_wrap_none = 'None'; //to translate
-$html_usenet_separator = 'Usenet separator ("-- \n") Before signature';  //to translate
-$html_mark_as = 'Mark as'; //to translate
-$html_read = 'read'; //to translate
-$html_unread = 'unread'; //to translate
-$html_encoding = 'Character encoding'; // to translate
+$html_wrap = 'Zalomit odchozí zprávy na:';
+$html_wrap_none = 'žádný';
+$html_usenet_separator = 'Oddělovač před podpisem ("-- \n")';
+$html_mark_as = 'Označit jako';
+$html_read = 'přečtené';
+$html_unread = 'nečtené';
+$html_encoding = 'Znaková sada';
 
 // Contacts manager
-$html_add = 'Add';  //to translate
-$html_contacts = 'Contacts';  //to translate
-$html_modify = 'Modify';  //to translate
-$html_back = 'Back';  //to translate
-$html_contact_add = 'Add new contact';  //to translate
-$html_contact_mod = 'Modify a contact';  //to translate
-$html_contact_first = 'First name';  //to translate
-$html_contact_last = 'Last Name';  //to translate
-$html_contact_nick = 'Nick';  //to translate
-$html_contact_mail = 'Mail';  //to translate
-$html_contact_list = 'Contact list of ';  //to translate
-$html_contact_del = 'from the contact list';  //to translate
-
-$html_contact_err1 = 'Maximal number of contact is ';  //to translate
-$html_contact_err2 = 'You can\'t add a new contact';  //to translate
-$html_contact_err3 = 'You don\'t have access rights to contact list'; //to translate
-$html_del_msg = 'Delete selected messages ?';  //to translate
-$html_down_mail = 'Download';  //to translate
-
+$html_add = 'Přidat';
+$html_contacts = 'Kontakty';
+$html_modify = 'Změnit';
+$html_back = 'Zpět';
+$html_contact_add = 'Přidat nový kontakt';
+$html_contact_mod = 'Změnit kontakt';
+$html_contact_first = 'Křestní jméno';
+$html_contact_last = 'Příjmení';
+$html_contact_nick = 'Přezdívka';
+$html_contact_mail = 'E-mail';
+$html_contact_list = 'Seznam kontaktů ';
+$html_contact_del = 'ze seznamu kontaktů';
+$html_contact_err1 = 'Maximální počet kontaktů je ';
+$html_contact_err2 = 'Nemůžete přidat nový kontakt.';
+$html_contact_err3 = 'Nemáte přístup k seznamu kontaktů';
+$html_del_msg = 'Smazat označené zprávy?';
+$html_down_mail = 'Stáhnout';
 $original_msg = '-- Původní zpráva --';
 $to_empty = 'Musíte vyplnit kolonku Komu:';
 
 // Images warning
-$html_images_warning = 'For your security, remote pictures are not displayed.'; // to translate
-$html_images_display = 'Display pictures'; // to translate
+$html_images_warning = 'Pro vaše bezpečí nejsou vzdálené obrázky zobrazeny.';
+$html_images_display = 'Zobrazit obrázky';
 
 // SMTP problems (class_smtp.php)
 $html_smtp_error_no_conn = 'Chyba při vytváření SMTP spojení';
@@ -231,16 +230,16 @@ $html_smtp_error_unexpected = 'Neočekávaná odezva SMTP:';
 
 // IMAP messages (class_local.php)
 $lang_could_not_connect = 'Chyba při připojování k serveru';
-$lang_invalid_msg_num = 'Bad Message Number';  //to translate
+$lang_invalid_msg_num = 'Špatné číslo zprávy';
 
-$html_file_upload_attack = 'Possible file upload attack';  //to translate
-$html_invalid_email_address = 'Invalid e-mail address';  //to translate
-$html_invalid_msg_per_page = 'Invalid number of messages per page';  //to translate
-$html_invalid_wrap_msg = 'Invalid message wrap width';  //to translate
-$html_seperate_msg_win = 'Messages in separate window';  //to translate
+$html_file_upload_attack = 'Možný útok při nahrávání souboru';
+$html_invalid_email_address = 'Špatná e-mailová adresa';
+$html_invalid_msg_per_page = 'Špatný počet zpráv na stránku';
+$html_invalid_wrap_msg = 'Špatná hranice zalamování textu';
+$html_seperate_msg_win = 'Zprávy v oddělených oknech';
 
 // Exceptions
-$html_err_file_contacts = 'Unable to open contacts file for writing.'; //to translate
+$html_err_file_contacts = 'Nelze otevřít soubor kontaktů pro zápis.';
 $html_session_file_error = 'Unable to open session file for writing.';  //to translate
 $html_login_not_allowed = 'This login is not allowed for connexion.'; //to translate
 ?>
